<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo3" />

        <com.app.asi.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x40"
            android:gravity="center"
            android:text="@string/choose_your_selection"
            android:textColor="@color/white"
            android:textSize="@dimen/x16"
            app:typeface="@string/font_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x30"
            android:orientation="horizontal">

            <com.app.asi.ui.views.AnyTextView
                android:id="@+id/btnTrivia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="@dimen/x10"
                android:drawableTop="@drawable/tip_question"
                android:gravity="center"
                android:text="@string/trivia"
                android:textColor="@color/white"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <com.app.asi.ui.views.AnyTextView
                android:id="@+id/btnTips"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="@dimen/x10"
                android:drawableTop="@drawable/tips_help"
                android:gravity="center"
                android:text="@string/tips"
                android:textColor="@color/white"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>