<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/x45"
    android:paddingStart="@dimen/x45"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x50"
        android:src="@drawable/logo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/x40"
        android:gravity="center_horizontal"
        android:text="@string/to_reset_your_password_please_enter_your_email"
        android:textColor="@color/app_text_color"
        android:textSize="@dimen/x14"
       />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/app_text_color"
        android:theme="@style/EditTextHint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/x10"
            android:hint="@string/email_id"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/x10"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/x14" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/app_text_color" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/x14" />

</LinearLayout>
